src/test/resources/test/coco/invalid/ModelWithDuplicatedFieldNames.struct
package test.coco.invalid;

struct ModelWithDuplicatedFieldNames {
  B f1;
  foo.bar.T1[] f3;
  Ololololo f1;
}
